fixed clipping error

--- a/src/Css/Default.css
+++ b/src/Css/Default.css
@@ -8,26 +8,26 @@ html{
 
 h1{
     font-weight: 600;
-    font-size: 7vw;
+    font-size: 7vh;
     font-style: bold;
 }
 
 h2{
     font-weight: 600;
-    font-size: 4vw;
+    font-size: 4vh;
     font-style: bold;
     margin: 20px 0px;
 }
 
 h3{
     font-weight: 600;
-    font-size: 1.5vw;
+    font-size: 1.5vh;
     font-style: bold;
 }
 
 h4{
     font-weight: 600;
-    font-size: 16vw;
+    font-size: 16vh;
     font-style: bold;
 }
 
